--- a/Instructions/20533D_LAB_07.md
+++ b/Instructions/20533D_LAB_07.md
@@ -177,17 +177,19 @@ The main tasks for this exercise are as follows:
 
 2. From the **Administrator: Command Prompt** window, in the current directory, create a new file named docker-compose.yml with the following content:
   ```
-  wordpress:
-    image: wordpress
-    links:
-      - db:mysql
-    ports:
-      - 8080:80
+  version: "3"
+  services:
+    wordpress:
+      image: wordpress
+      links:
+        - db:mysql
+      ports:
+        - 8080:80
 
-  db:
-    image: mariadb
-    environment:
-      MYSQL_ROOT_PASSWORD: Pa55w.rd
+    db:
+      image: mariadb
+      environment:
+        MYSQL_ROOT_PASSWORD: Pa55w.rd
   ```
 
 #### Task 2: Deploy the containers with docker-compose to an Azure VM
