--- a/Instructions/20533D_LAB_01.md
+++ b/Instructions/20533D_LAB_01.md
@@ -38,25 +38,15 @@ A. Datum Corporation wants to expand their cloud presence by taking advantage of
 ### Scenario
   
 A. Datum has asked you to explore the available browser-based Azure portals to assess how the corporation will use them. 
-In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the Azure Account Center, you must view and download your current billing data. In the Azure classic portal, you must identify the association between your subscription and an Azure AD tenant
+In the Azure portal, you must observe the organization of resources and customize the interface to make your testing environment more accessible. In the Azure Account Center, you must view and download your current billing data. 
 
  The main tasks for this exercise are as follows:
 
-1. Use the Azure classic portal
+1. Use the Azure portal
 
-2. Use the Azure portal
+2. Use the Azure account portal
 
-3. Use the Azure account portal
-
-#### Task 1: Use the Azure classic portal
-  
-1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**.
-
-2. Start Microsoft Edge, browse to the Azure classic portal and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
-
-3. In the Azure classic portal, view the Azure AD tenant asssociated with your Azure subscription.
-
-#### Task 2: Use the Azure portal
+#### Task 1: Use the Azure portal
 
 1. In Microsoft Edge, browse to the Azure portal.
 
@@ -70,7 +60,7 @@ In the Azure portal, you must observe the organization of resources and customiz
 
 6. Add **Virtual machine scale sets** to the hub menu. Leave the Microsoft Edge window open.
 
-#### Task 3: Use the Azure account portal
+#### Task 2: Use the Azure account portal
   
 1. Start Microsoft Edge and browse to the Azure account portal.
 
