removed references to the Azure classic portal

--- a/Instructions/20533D_LAB_AK_01.md
+++ b/Instructions/20533D_LAB_AK_01.md
@@ -3,37 +3,29 @@
   
 ## Exercise 1: Using the Azure portals
   
-#### Task 1: Use the Azure classic portal
+#### Task 1: Use the Azure  portal
   
 1. Ensure that you are signed in to MIA-CL1 as **Student** with the password **Pa55w.rd**. 
 
-2. Start Microsoft Edge, browse to https://manage.windowsazure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
+2. Start Microsoft Edge, browse to https://portal.azure.com, and sign in by using the Microsoft account that is the Service Administrator of your Azure subscription.
 
-3. On the Azure classic portal page, in the navigation bar on the left hand side, scroll down, and then click **SETTINGS**.
+3. On the **Dashboard** page, at the top of the screen, click **Edit dashboard**.
 
-4. In the settings pane, note the entry representing the association between your Azure subscription and the Azure Active Directory (Azure AD) tenant. 
+4. On the **Dashboard** page, right-click the **All resources** tile, and then click **4x6**.
 
-#### Task 2: Use the Azure portal
+5. On the **Dashboard** page, move down the **Service health** tile and the **Marketplace** tile such that their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
 
-1. In Microsoft Edge, in the Azure classic portal, at the top of the screen, click **Check out the new portal**, and then click **Launch**. If you do not have the Azure classic portal open, browse to https://portal.azure.com.
+6. Move the **Quickstart tutorials** tile such that its left edge aligns with the right edge of the **All resources** tile and click **Done customizing**.
 
-2. On the **Dashboard** page, at the top of the screen, click **Edit dashboard**.
+7. Review the results, then click **Edit dashboard** again.
 
-3. On the **Dashboard** page, right-click the **All resources** tile, and then click **4x6**.
+8. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
 
-4. On the **Dashboard** page, move down the **Service health** tile and the **Marketplace** tile such that their top edge aligns with the bottom edge of the **Quickstart tutorials** tile. 
+9. Click **Done customizing**.
 
-5. Move the **Quickstart tutorials** tile such that its left edge aligns with the right edge of the **All resources** tile and click **Done customizing**.
+10. On the **Dashboard** page, in the hub menu, click **More services**, and then, in the service menu, click the star beside **Virtual machine scale sets**. Close the service menu and verify that the **Virtual machine scale sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
 
-6. Review the results, then click **Edit dashboard** again.
-
-7. Right-click unoccupied area of the dashboard and, in the right-click menu, click **Reset to default state**. When prompted to confirm, click **Yes**.
-
-8. Click **Done customizing**.
-
-9. On the **Dashboard** page, in the hub menu, click **More services**, and then, in the service menu, click the star beside **Virtual machine scale sets**. Close the service menu and verify that the **Virtual machine scale sets** entry appears at the bottom of the hub menu. Leave the Microsoft Edge window open.
-
-#### Task 3: Use the Azure account portal
+#### Task 2: Use the Azure account portal
   
 1. Start Microsoft Edge and browse to https://account.windowsazure.com
 
