removed references to the Azure classic portal

--- a/Instructions/20533D_LAB_09.md
+++ b/Instructions/20533D_LAB_09.md
@@ -111,7 +111,7 @@ The main tasks for this exercise are as follows:
 
 5. Open an InPrivate Microsoft Edge window, navigate to the Azure portal, sign in as Remi Desforges, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
 
-6. Open an InPrivate Microsoft Edge window, navigate to the Azure classic portal, sign in as Karen Gruber, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
+6. Open an InPrivate Microsoft Edge window, navigate to the Azure portal, sign in as Karen Gruber, when prompted, change the password to a new value and then sign-out and close the InPrivate Microsoft Edge window. Take a note of the new password.
 
 7. Note the message stating **No subscription found**. Click **SIGN OUT** and close the in-private session of Microsoft Edge.
 
