removed references to the Azure classic portal

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -99,7 +99,7 @@
 
 20. Close the InPrivate Mirosoft Edge session.
 
-21. Start an InPrivate Mirosoft Edge window and browse to the Azure classic portal at http://manage.windowsazure.com.
+21. Start an InPrivate Mirosoft Edge window and browse to the Azure portal at http://portal.azure.com.
 
 22. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of Karen Gruber's account and the corresponding temporary password.
 
