added the path to the docker-compose.yml file

--- a/Instructions/20533D_LAB_AK_07.md
+++ b/Instructions/20533D_LAB_AK_07.md
@@ -196,7 +196,7 @@ docker -D -H tcp://IP-address:2376 --tlsverify --tlscacert=C:\Users\Student\.doc
 
 3. When prompted whether to create a new file, click **Yes**. 
 
-4. In Notepad, type the following text, click **File** and click **Save**:
+4. In Notepad, type the following text, click **File** and click **Save** (you can find the file in the **E:\\Labfiles\\Lab07\\Solution** folder):
 
   ```
   version: "3"
