--- a/Instructions/20533D_LAB_03.md
+++ b/Instructions/20533D_LAB_03.md
@@ -62,7 +62,7 @@ The main tasks for this exercise are as follows:
 
   -  Location: an Azure region close to the location of the lab environment.
 
-  -  Size: **D1_V2 Standard**.
+  -  Size: **D1_V2_Standard**
 
   -  Use managed disks: **Yes**
 
