Import and publish using publishing profile
Updated the import and publish using publishing profile instructions.

--- a/Instructions/20533D_LAB_AK_05.md
+++ b/Instructions/20533D_LAB_AK_05.md
@@ -137,11 +137,11 @@
 
 3. On the Publish page, click **Create new profile**.
 
-4. In the list of publishing options, click **Import Profile** and then click **Publish**. 
+4. In the list of publishing options, click **Import Profile** and then click **OK**. 
 
 5. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
 
-6. Select the **.PublishSettings** file that you downloaded in Task 1 of this exercise, and then click **Open**.
+6. Select the **.PublishSettings** file that you downloaded in Task 1 of this exercise, click **Open**, and then click **Publish**.
 
 7. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
 
@@ -180,11 +180,11 @@
 
 10. In Solution Explorer, right-click the **AdatumWebsite** project, and then click **Publish**.
 
-11. In the list of publishing options, click **Import Profile** and then click **Publish**.  If **Import Profile** is not listed, you may need to click the right pointing arrow head to display additional publishing options. 
+11. In the list of publishing options, click **Import Profile** and then click **OK**.  If **Import Profile** is not listed, you may need to click the right pointing arrow head to display additional publishing options. 
 
 12. In the **Import Publish Settings** dialog box, browse to the **Downloads** folder.
 
-13. Select the **.PublishSettings** file that you downloaded in step 5 of this task, and then click **Open**.
+13. Select the **.PublishSettings** file that you downloaded in step 5 of this task, click **Open**, and then click **Publish**.
 
 14. This will automatically build and publish the web app from Visual Studio to the Azure Web app you created in the first exercise and open a new tab in the Microsoft Edge window displaying it.
 
