remove dot, fixed script name

--- a/Instructions/20533D_LAB_06.md
+++ b/Instructions/20533D_LAB_06.md
@@ -63,7 +63,7 @@ The main tasks for this exercise are as follows:
 
   - Subscription: the name of your Azure subscription
 
-  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533D0602-LabRG**.
+  - Resource group: ensure that **Create new** is selected and, in the textbox below, type **20533D0602-LabRG**
 
   - Location: the same Azure region that you chose when running the provisioning script at the beginning of this module
 
@@ -132,7 +132,7 @@ The main tasks for this exercise are as follows:
   
 1. Switch to the Windows PowerShell ISE window and run the `Add-AzureRmAccount` cmdlet. When prompted, sign in by using the Microsoft account that is the Service Administrator of your Microsoft Azure subscription. 
 
-2. From the Windows PowerShell ISE, open E:\\Labfiles\\Lab06\\Starter\\New-FileShare_20533D06.ps1.
+2. From the Windows PowerShell ISE, open E:\\Labfiles\\Lab06\\Starter\\New-20533D06FileShare.ps1.
 
 3. In the script pane, in the **$storageAccountName** variable declaration at the beginning, replace the `<storage-account-name>` value with the name of the Azure storage account that you created in the previous exercise.
 
