change blade Name "Azure AD Premium P2"

--- a/Instructions/20533D_LAB_AK_09.md
+++ b/Instructions/20533D_LAB_AK_09.md
@@ -32,9 +32,9 @@
 
 4. Click **Get a free trial for Azure AD Premium**.
 
-5. On the **Activate** blade, in the **AZURE AD PREMIUM** section, click **Free trial**.
+5. On the **Activate** blade, in the **AZURE AD PREMIUM P2** section, click **Free trial**.
 
-6. On the **Activate Azure AD Premium trial**, click **Activate**.
+6. On the **Activate Azure AD Premium P2 trial**, click **Activate**.
 
 7. Wait until the Azure AD Premium trial is successfully activated.
 
