added reference to import of ADSync.psd1

--- a/Instructions/20533D_LAB_10.md
+++ b/Instructions/20533D_LAB_10.md
@@ -136,7 +136,7 @@ The main tasks for this exercise are as follows:
 
 3. From the Windows PowerShell ISE console, use the **Set-ADUser** cmdlet to set the value of the **Title** and **Department** attributes of the user **bbeach** to **VP** and **Marketing**, respectively.
 
-4. From the Windows PowerShell ISE console, check the current synchronization settings by running the **Get-ADSyncScheduler** cmdlet.
+4. From the Windows PowerShell ISE console, import the module C:\\Program Files\\Microsoft AZure AD Sync\\Bin\\ADSync\\ADSync.psd1" and check the current synchronization settings by running the **Get-ADSyncScheduler** cmdlet.
 
 5. From the Windows PowerShell ISE console, start delta synchronization by running **Start-ADSyncSyncCycle -PolicyType Delta**.
 
