Changed Service Plan Name
Changed 20533D0501LabPlan2 into 20533D0502LabPlan (same as AK)

--- a/Instructions/20533D_LAB_05.md
+++ b/Instructions/20533D_LAB_05.md
@@ -220,7 +220,7 @@ The main tasks for this exercise are as follows:
 
 3. Use the **New-AzureRmResourceGroup** cmdlet to create a new resource group named **20533D0502-LabRG** located in the `SecondLocation`.
 
-4. Use the **New-AzureRmAppServicePlan** cmdlet to create a new App Service plan named **20533D0501LabPlan2** with the Standard pricing tier in the resource group **20533D0502-LabRG** and the `SecondLocation`.
+4. Use the **New-AzureRmAppServicePlan** cmdlet to create a new App Service plan named **20533D0502LabPlan** with the Standard pricing tier in the resource group **20533D0502-LabRG** and the `SecondLocation`.
 
 5. Use the **New-AzureRMWebApp** cmdlet to create a new web app. Use the following information for the web app:
 
@@ -228,7 +228,7 @@ The main tasks for this exercise are as follows:
 
   - Name: a unique name (use the **Test-AzureRmDnsAvailability** cmdlet to identify it)
 
-  - Service plan: **20533D0501LabPlan2**
+  - Service plan: **20533D0502LabPlan**
 
   - Location: `SecondLocation`
 
